tried to fix failing tests